--- a/api/reference/korifi-api.yaml
+++ b/api/reference/korifi-api.yaml
@@ -216,6 +216,24 @@ rules:
 - apiGroups:
   - workloads.cloudfoundry.org
   resources:
+  - cforgs
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - workloads.cloudfoundry.org
+  resources:
+  - cforgs/status
+  verbs:
+  - get
+- apiGroups:
+  - workloads.cloudfoundry.org
+  resources:
   - cfpackages
   verbs:
   - create
