--- a/controllers/config/crd/bases/workloads.cloudfoundry.org_cforgs.yaml
+++ b/controllers/config/crd/bases/workloads.cloudfoundry.org_cforgs.yaml
@@ -37,6 +37,7 @@ spec:
             properties:
               name:
                 description: Name that is displayed to users
+                pattern: ^[\w][-\w]*$
                 type: string
             required:
             - name
